# savant-ai

./: .gitignore  AUDIO_DAEMON_CLI.md  CLAUDE.md  Cargo.toml  GEMINI.md  README.md  SYSTEM_AUDIO_SETUP.md  TODO.md  UNIX_PHILOSOPHY_DEMO.md  UNIX_REFACTOR_PLAN.md  analyze-video-data.sh  audio-devices.sh  auto-match-sample-rates.sh  auto-setup-system-audio.sh  create-adaptive-multi-output.sh  demo-query.sh  fix-audio-quality.sh  fixed-audio-daemon.sh  flow.md  monitor-daemons  permanent-quality-setup.sh  process-screenshots  query-audio.sh  quick-video-analysis.sh  sav  sav-video  savant-audio-control.sh  savant-daemon  setup  setup-high-quality-audio.sh  setup-system-audio.sh  start-daemons  stop-daemons  styles.css  test-config.md  test-database-sql.sh  test-manual-import.db  test-manual.db  test-mcp-natural-queries.sh  test-systems  (+5 more)
crates/: README.md
crates/e2e-coding-detection/: Cargo.toml  README.md
crates/e2e-coding-detection/src/: flexible_test_framework.rs  hackerrank_hard_test.rs  main.rs  mock_demo.rs  optimized_demo.rs  quick_demo.rs  solution_validator.rs  test_suite_runner.rs
crates/savant-audio/: Cargo.toml
crates/savant-audio/src/: capture.rs  devices.rs  formats.rs  lib.rs  macos.rs
crates/savant-core/: Cargo.toml
crates/savant-core/src/: config.rs  error.rs  lib.rs  types.rs
crates/savant-db/: Cargo.toml
crates/savant-db/migrations/: 001_initial.sql  002_speaker_identification.sql  003_llm_integration.sql  004_database_optimizations.sql  005_visual_data.sql  006_high_frequency_optimized.sql  007_video_capture.sql  008_multimodal_analysis.sql
crates/savant-db/src/: lib.rs  llm_client.rs  main.rs  mcp_server.rs  mcp_server_prompts.rs  mcp_server_tools.rs  natural_query.rs  security.rs  semantic_search.rs  speaker_identification.rs  visual_data.rs
crates/savant-db/tests/: visual_data_tests.rs
crates/savant-llm/: Cargo.toml
crates/savant-llm/src/: lib.rs  main.rs  mock.rs
crates/savant-llm/tests/: cli_tests.rs
crates/savant-mcp/: Cargo.toml
crates/savant-mcp/src/: lib.rs  main.rs  mcp_server.rs  mcp_server_tools.rs  visual_server.rs
crates/savant-mcp/tests/: mcp_server_tests.rs
crates/savant-ocr/: Cargo.toml
crates/savant-ocr/src/: analyzer.rs  classifier.rs  comprehensive_extractor.rs  engine.rs  fast_config.rs  lib.rs  main.rs  preprocessor.rs  simple_extractor.rs
crates/savant-screen-monitor/: Cargo.toml
crates/savant-stt/: Cargo.toml
crates/savant-stt/src/: lib.rs  models.rs  whisper.rs
crates/savant-sync/: Cargo.toml
crates/savant-sync/src/: lib.rs  main.rs  timeline.rs
crates/savant-transcribe/: Cargo.toml
crates/savant-transcribe/src/: main.rs
crates/savant-video/: Cargo.toml
crates/savant-video-cli/: Cargo.toml
crates/savant-video-cli/src/: main.rs
crates/savant-video-processor/: Cargo.toml
crates/savant-video/src/: analyzer.rs  change_detector.rs  coding_problem_detector.rs  config.rs  integrated_processor.rs  lib.rs  llm_provider.rs  multimodal.rs  privacy.rs  processor.rs  real_time_analyzer.rs  solution_generator.rs  storage.rs
crates/savant-video/src/capture/: linux.rs  macos.rs  mod.rs  windows.rs
crates/savant-video/tests/: coding_problem_detector_tests.rs  integration_tests.rs  performance_benchmarks.rs  solution_generator_tests.rs
crates/savant-vision/: Cargo.toml
crates/savant-vision/src/: analyzer.rs  classifier.rs  detector.rs  lib.rs  main.rs  patterns.rs
data/databases/: README.md
data/test-captures/: test-113647.md  test-capture.md  test-with-audio.md  test-with-real-audio.md  test_afplay.md  test_blackhole.md  test_youtube.md
docs/: DESIGN_CRITIQUE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  ORGANIZATION_UPDATE.md  PACKAGING_AND_DISTRIBUTION_STRATEGY.md  README.md  RELEASE_ROADMAP.md  SETUP_GUIDE.md  VISUAL_DATA_OPTIMIZATION_RESEARCH.md  architecture.md  audio-transcription.md  cli-tools.md  database.md  deprecations.md  llm-database-integration-plan.md  mcp-client-setup.md  smart-database-pipeline.md
docs/architecture/: README.md
docs/development/: CLEANUP_CANDIDATES.md  README.md  implementation-summary.md  unix-philosophy.md
docs/guides/: README.md  audio-setup.md  daemon-management.md  permissions.md
docs/quickstart/: README.md
docs/reference/: README.md  audio-transcription.md  cli-tools.md
docs/user-guides/: AUDIO_VIDEO_SETUP_AUTOMATION.md  COMPREHENSIVE_SETUP_GUIDE.md  PLATFORM_SPECIFIC_INSTALLERS.md  SETUP_WORKFLOWS_SUMMARY.md  SYSTEM_AUDIO_SETUP.md  USER_EDUCATION_WORKFLOWS.md
examples/: unix_examples.sh
scripts/: README.md  ask-my-data.sh  backup-transcripts-to-db.sh  cleanup-databases.sh  demo-query.sh  loc.sh  query-audio.sh  query-my-data.sh  simple-ring-buffer-test.sh  size.sh  test-ring-buffer.sh
scripts/audio/: capture-system-audio.sh  savant-audio-control.sh  savant-audio-daemon.sh
scripts/daemon-management/: README.md  monitor_daemons.sh  restart_daemons.sh  start_all_daemons.sh  start_solution_monitoring.sh  stop_all_daemons.sh  test_all_systems.sh
scripts/setup/: automated-setup.sh  package-distribution.sh  permission-helper.sh  verify-system-permissions.sh
scripts/tests/: README.md  run-all-tests.sh  run-comprehensive-tests.sh  test-chatbot-integration.sh  test-cli-tools.sh  test-mcp-natural-queries.sh  test-new-functionality.sh  test-performance.sh
scripts/utils/: update-paths.sh
scripts/video/: savant-video-control.sh  savant-video-daemon.sh
src/: app.rs  commands.rs  main.rs  overlay.rs  simple_app.rs  taskbar_app.rs  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/commands/: audio.rs  browser.rs  chat_history.rs  config.rs  hotkey.rs  llm.rs  llm_database.rs  mod.rs  ocr.rs  solutions.rs  system.rs  system_audio.rs
src/components/: browser_overlay.rs  dashboard.rs  invisible_overlay.rs  minimal_chat.rs  minimal_overlay.rs  mod.rs  natural_query.rs  overlay.rs  simple_dashboard.rs  simple_invisible_overlay.rs  simple_overlay.rs  solution_display.rs
src/utils/: llm.rs  mod.rs  (+2 more)
test-results/: hackerrank_hard_test_results.json  hackerrank_hard_test_summary.txt
(+5 files in other folders)
