[package]
name = "e2e-coding-detection"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_e2e_coding_detection"
path = "src/main.rs"

[[bin]]
name = "mock_demo"
path = "src/mock_demo.rs"

[[bin]]
name = "optimized_demo"
path = "src/optimized_demo.rs"

[[bin]]
name = "hackerrank_hard_test"
path = "src/hackerrank_hard_test.rs"

[[bin]]
name = "test_suite_runner"
path = "src/test_suite_runner.rs"

[[bin]]
name = "quick_demo"
path = "src/quick_demo.rs"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Savant crates
savant-core = { path = "../savant-core" }
savant-ocr = { path = "../savant-ocr" }
savant-vision = { path = "../savant-vision" }
savant-video = { path = "../savant-video" }
savant-llm = { path = "../savant-llm" }
savant-db = { path = "../savant-db" }

# Additional dependencies for testing
image = "0.25"
tracing = "0.1"
tracing-subscriber = "0.3"
tempfile = "3.0"