[package]
name = "savant-llm"
version = "0.1.0"
edition = "2021"
description = "Standalone LLM inference tool for Savant AI - follows UNIX philosophy"

[[bin]]
name = "savant-llm"
path = "src/main.rs"

[lib]
name = "savant_llm"
path = "src/lib.rs"

[dependencies]
savant-core = { path = "../savant-core" }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
