[package]
name = "savant-ocr"
version = "0.1.0"
edition = "2021"

[dependencies]
savant-core = { path = "../savant-core" }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
image = "0.25"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# OCR engines
tesseract = "0.14"
rusty-tesseract = "1.1"

# Image preprocessing
imageproc = "0.25"

# Text analysis
regex = "1.0"
unicode-segmentation = "1.0"

# Async support
futures = "0.3"
async-trait = "0.1"

# CLI
clap = { version = "4.0", features = ["derive"] }
tracing-subscriber = "0.3"

[[bin]]
name = "savant-ocr"
path = "src/main.rs"