[package]
name = "savant-screen-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }

# Local dependencies
savant-core = { path = "../savant-core" }
savant-video = { path = "../savant-video" }
savant-db = { path = "../savant-db" }
savant-ocr = { path = "../savant-ocr" }
savant-vision = { path = "../savant-vision" }
savant-mcp = { path = "../savant-mcp" }

[[bin]]
name = "savant-screen-monitor"
path = "src/main.rs"