[package]
name = "savant-sync"
version = "0.1.0"
edition = "2021"

[dependencies]
savant-core = { path = "../savant-core" }
savant-video = { path = "../savant-video" }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }
clap = { version = "4.0", features = ["derive"] }

# Time series and synchronization
crossbeam = "0.8"
parking_lot = "0.12"

# Data structures
indexmap = "2.0"
dashmap = "5.0"

# Async support
futures = "0.3"
async-trait = "0.1"

[[bin]]
name = "savant-sync"
path = "src/main.rs"