[package]
name = "savant-video-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "savant-video"
path = "src/main.rs"

[dependencies]
savant-video = { path = "../savant-video" }
savant-core = { path = "../savant-core" }
savant-db = { path = "../savant-db" }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.10", features = ["v4", "serde"] }