[package]
name = "savant-video"
version = "0.1.0"
edition = "2021"

[dependencies]
savant-core = { path = "../savant-core" }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
image = "0.25"
sha2 = "0.10"
base64 = "0.22"
dirs = "5.0"
async-trait = "0.1"

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
dispatch = "0.2"
foreign-types = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
xcb = "1.3"

[lib]
name = "savant_video"
path = "src/lib.rs"