[package]
name = "savant-video"
version = "0.1.0"
edition = "2021"

[dependencies]
savant-core = { path = "../savant-core" }
savant-ocr = { path = "../savant-ocr" }
savant-vision = { path = "../savant-vision" }
# savant-db = { path = "../savant-db" } # Removed to break cyclic dependency
savant-llm = { path = "../savant-llm" }
anyhow = "1.0"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
image = "0.25"
sha2 = "0.10"
base64 = "0.22"
dirs = "5.0"
async-trait = "0.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
regex = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
lru = "0.12"
rand = "0.8"
md5 = "0.7"
reqwest = { version = "0.12", features = ["json"] }

# Platform-specific dependencies
[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.23"
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"
objc-foundation = "0.1"
dispatch = "0.2"
foreign-types = "0.5"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.13"
xcb = "1.3"

[lib]
name = "savant_video"
path = "src/lib.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.0"
mockall = "0.11"
